package pizza;
/**
 * @author bruel (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaGrecqueStyleStrasbourg extends Pizza {

	public PizzaGrecqueStyleStrasbourg() {
		super();
		// TODO Auto-generated constructor stub
	}



	@Override
	public void cut() {
		// TODO Auto-generated method stub
	}

	@Override
	public void wrap() {
		// TODO Auto-generated method stub
	}

	@Override
	public String getName() {
		// TODO Auto-generated method stub
		return super.getName();
	}

	@Override
	public void bake() {
		// TODO Auto-generated method stub
		
	}
}
