package pizza;
/**
 * @author bruel (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaPoivronsStyleStrasbourg extends Pizza {

	@Override
	public void prepare() {
		// TODO Auto-generated method stub
		
	}

	@Override
	public void bake() {
		// TODO Auto-generated method stub
		
	}

	@Override
	public void cut() {
		// TODO Auto-generated method stub
		
	}

	@Override
	public void wrap() {
		// TODO Auto-generated method stub
		
	}


}
